--- a/src/components/Modal.astro
+++ b/src/components/Modal.astro
@@ -2,56 +2,93 @@
 
 ---
 
-<div class="relative overflow-x-auto shadow-md sm:rounded-lg h-full">
-  <table class="w-full text-sm text-left text-gray-500 dark:text-gray-400">
-    <thead
-      class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400"
-    >
+<div class="overflow-auto rounded-lg shadow">
+  <table class="w-full">
+    <thead class="bg-gray-50 border-b-2 border-gray-200">
       <tr>
-        <th scope="col" class="px-6 py-3"> Product name</th>
-        <th scope="col" class="px-6 py-3"> Color</th>
-        <th scope="col" class="px-6 py-3"> Category</th>
-
-        <span class="sr-only">Edit</span>
+        <th
+          class="p-3 text-xs md:text-sm font-semibold tracking-wide text-left w-16 sm:w-full"
+          >MATERIALES</th
+        >
+        <th class="p-3 text-xs md:text-sm font-semibold tracking-wide text-left"
+          >UNIDAD</th
+        >
+        <th class="p-3 text-xs md:text-sm font-semibold tracking-wide text-left"
+          >CANTIDAD</th
+        >
       </tr>
     </thead>
+    <tbody class="divide-y divide-gray-100">
+      <tr class="bg-white">
+        <td class="p-3 text-xs md:text-sm text-gray-700 whitespace-wrap"
+          >GYPLAC (STD) 1.22X2.44MM(1/2")</td
+        >
+        <td class="p-3 text-sm text-gray-700">PL</td>
+        <td class="p-3 text-sm text-gray-700">1</td>
+      </tr>
+      <tr class="bg-gray-50">
+        <td class="p-3 text-xs md:text-sm text-gray-700 whitespace-wrap"
+          >PARANTE 3" VOLCANMETAL/CONSTRUTEK 89x38x0.45mmx3m</td
+        >
+        <td class="p-3 text-sm text-gray-700">PZA</td>
+        <td class="p-3 text-sm text-gray-700">0</td>
+      </tr>
+      <tr class="bg-white">
+        <td class="p-3 text-xs md:text-sm text-gray-700 whitespace-wrap"
+          >RIEL 3" VOLCANMETAL/CONSTRUTEK 90x25x0.45mmx3m</td
+        >
+        <td class="p-3 text-sm text-gray-700">PZA</td>
+        <td class="p-3 text-sm text-gray-700">0</td>
+      </tr>
+      <tr class="bg-gray-50">
+        <td class="p-3 text-xs md:text-sm text-gray-700 whitespace-wrap"
+          >TORNILLO PLANCHA 6x1 P/FINA</td
+        >
+        <td class="p-3 text-sm text-gray-700">MILL</td>
+        <td class="p-3 text-sm text-gray-700">0</td>
+      </tr>
+      <tr class="bg-white">
+        <td class="p-3 text-xs md:text-sm text-gray-700 whitespace-wrap"
+          >TORNILLO METAL WAFER 8X1/2" P/FINA</td
+        >
+        <td class="p-3 text-sm text-gray-700">MILL</td>
+        <td class="p-3 text-sm text-gray-700">0</td>
+      </tr>
+      <tr class="bg-gray-50">
+        <td class="p-3 text-xs md:text-sm text-gray-700 whitespace-wrap"
+          >CLAVO 1" PARA DISPARO</td
+        >
+        <td class="p-3 text-sm text-gray-700">CTO</td>
+        <td class="p-3 text-sm text-gray-700">0</td>
+      </tr>
+      <tr class="bg-white">
+        <td class="p-3 text-xs md:text-sm text-gray-700 whitespace-wrap"
+          >FULMINANTE CALIBRE 0.22</td
+        >
+        <td class="p-3 text-sm text-gray-700">CTO</td>
+        <td class="p-3 text-sm text-gray-700">0</td>
+      </tr>
+      <tr class="bg-gray-50">
+        <td class="p-3 text-xs md:text-sm text-gray-700 whitespace-wrap"
+          >CINTA PAPEL METALDRLL 50mm x 90m</td
+        >
+        <td class="p-3 text-sm text-gray-700">ROLL</td>
+        <td class="p-3 text-sm text-gray-700">0</td>
+      </tr>
+      <tr class="bg-white">
+        <td class="p-3 text-xs md:text-sm text-gray-700 whitespace-wrap"
+          >MASILLA GYPLAC BALDE X 27 KG</td
+        >
+        <td class="p-3 text-sm text-gray-700">BALD</td>
+        <td class="p-3 text-sm text-gray-700">0</td>
+      </tr>
+      <tr class="bg-gray-50">
+        <td class="p-3 text-xs md:text-sm text-gray-700 whitespace-wrap"
+          >LIJA Nº120 AL AGUA</td
+        >
+        <td class="p-3 text-sm text-gray-700">PZA</td>
+        <td class="p-3 text-sm text-gray-700">0</td>
+      </tr>
+    </tbody>
   </table>
-  <tbody>
-    <tr
-      class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600"
-    >
-      <th
-        scope="row"
-        class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
-      >
-        Apple MacBook Pro 17"
-      </th>
-      <td class="px-6 py-4"> Silver</td>
-      <td class="px-6 py-4"> Laptop</td>
-    </tr>
-    <tr
-      class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600"
-    >
-      <th
-        scope="row"
-        class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
-      >
-        Microsoft Surface Pro
-      </th>
-      <td class="px-6 py-4"> White</td>
-      <td class="px-6 py-4"> Laptop PC</td>
-    </tr>
-    <tr
-      class="bg-white dark:bg-gray-800 hover:bg-gray-50 dark:hover:bg-gray-600"
-    >
-      <th
-        scope="row"
-        class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
-      >
-        Magic Mouse 2
-      </th>
-      <td class="px-6 py-4"> Black</td>
-      <td class="px-6 py-4"> Accessories</td>
-    </tr>
-  </tbody>
 </div>
