creando la table del modal

--- a/src/components/Cuerpomodal.astro
+++ b/src/components/Cuerpomodal.astro
@@ -41,7 +41,7 @@ import Modal from "../components/Modal.astro";
       <Modal />
     </div>
     <div class="modal-footer">
-      <h3>Modal Footer</h3>
+      <h3>METALDRYLL</h3>
     </div>
   </div>
 </div>
