table para el modal

--- a/src/components/Cuerpomodal.astro
+++ b/src/components/Cuerpomodal.astro
@@ -35,7 +35,7 @@ import Modal from "../components/Modal.astro";
   <div class="modal-content">
     <div class="modal-header">
       <span class="close">&times;</span>
-      <h2>Modal Header</h2>
+      <h2>Modal metaldryll</h2>
     </div>
     <div class="modal-body">
       <Modal />
