--- a/src/pages/Standar.astro
+++ b/src/pages/Standar.astro
@@ -1,9 +1,9 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Linkscalculadora from "../components/Linkscalculadora.astro";
-import Form from "../components/Form.astro";
-import MsgForm from "../components/msgform.astro";
+
 import Msgform from "../components/msgform.astro";
+import TitleDeCalculos from "../components/TitleDeCalculos.astro";
 ---
 
 <Layout title="Calculando Plancha Standar">
@@ -13,43 +13,10 @@ import Msgform from "../components/msgform.astro";
     </div>
 
     <div class="col-span-2">
-      <div class="p-5 text-center">
-        <span class="text1">PLACA STANDAR</span>
-        <span class="text2">Para Interiores</span>
-      </div>
+      <TitleDeCalculos />
       <div class="container__form grid grid-cols-1 p-6 m-auto rounded-md">
         <Msgform />
       </div>
     </div>
   </div>
 </Layout>
-<style>
-  span {
-    text-transform: uppercase;
-    display: block;
-  }
-  .text1 {
-    color: white;
-    font-size: 60px;
-    font-weight: 700;
-    letter-spacing: 8px;
-    /* background: black; */
-    position: relative;
-    animation: text 2.5s 1;
-  }
-  .text2 {
-    font-size: 30px;
-    color: #ffd200;
-  }
-
-  @keyframes text {
-    0% {
-      color: black;
-      margin-bottom: -40px;
-    }
-    30% {
-      letter-spacing: 25px;
-      margin-bottom: -40px;
-    }
-  }
-</style>
