logica del formulario un 80% listo

--- a/src/components/Cuerpomodal.astro
+++ b/src/components/Cuerpomodal.astro
@@ -1,5 +1,5 @@
 ---
-import Modal from "../components/Modal.astro";
+// import Modal from "./TablaResultado.jsx";
 ---
 
 <script>
@@ -38,7 +38,7 @@ import Modal from "../components/Modal.astro";
       <h2>Modal metaldryll</h2>
     </div>
     <div class="modal-body">
-      <Modal />
+      <!-- <Modal /> -->
     </div>
     <div class="modal-footer">
       <h3>METALDRYLL</h3>
@@ -132,3 +132,4 @@ import Modal from "../components/Modal.astro";
     }
   }
 </style>
+ ./TablaResultado.jsx
