--- a/src/components/msgform.astro
+++ b/src/components/msgform.astro
@@ -1,10 +1,10 @@
 ---
 import Muro from "../img/muro.jpg";
-import Form from "./Form.astro";
+import FormRh from "./Form.astro";
 ---
 
 <div class="grid gap-4">
-  <Form />
+  <FormRh />
 
   <div class="grid grid-cols-5 gap-4">
     <div>
