--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -50,6 +50,8 @@ const { title } = Astro.props;
 <style is:global>
   body {
     background: #fff;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+      sans-serif;
   }
   html {
     font-family: "Roboto", sans-serif;
