--- a/src/pages/Rh.astro
+++ b/src/pages/Rh.astro
@@ -1,7 +1,21 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import Linkscalculadora from "../components/Linkscalculadora.astro";
+import TitleDeCalculos from "../components/TitleDeCalculos.astro";
+import Msgform from "../components/msgform.astro";
 ---
 
 <Layout title="Calculando planchas de Rh ">
-  <h1>hola mundo</h1>
+  <div class="grid grid-cols-1 sm:grid-cols-1 md:grid-cols-3 gap-2">
+    <div class="col-span-1">
+      <Linkscalculadora />
+    </div>
+
+    <div class="col-span-2">
+      <TitleDeCalculos />
+      <div class="container__form grid grid-cols-1 p-6 m-auto rounded-md">
+        <Msgform />
+      </div>
+    </div>
+  </div>
 </Layout>
