listo el calculo de las plancha rh 80%

--- a/src/components/Rh/ContainerRh.astro
+++ b/src/components/Rh/ContainerRh.astro
@@ -1,6 +1,6 @@
 ---
 import Muro from "../img/muro.jpg";
-import FormRh from "./Form.astro";
+import FormRh from "./FormRh.astro";
 ---
 
 <div class="grid gap-4">
