--- a/src/components/Standar/FormStandar.astro
+++ b/src/components/Standar/FormStandar.astro
@@ -1,6 +1,6 @@
 ---
 import imgForm from "../img/muro.jpg";
-import InputForm from "./InputForm.jsx";
+import InputFormStandar from "./InputFormStandar.jsx";
 ---
 
 <section
@@ -29,7 +29,9 @@ import InputForm from "./InputForm.jsx";
        y tendra los
       <strong class="text-stone-200">m2 de la superficie</strong>.
     </p>
+    <!-- contenedor del formulario -->
+    <InputFormStandar client:load />
 
-    <InputForm client:load />
+    <!-- <-> -->
   </article>
 </section>
