agg logica a fibrecemento y cielo raso

--- a/src/components/Linkscalculadora.astro
+++ b/src/components/Linkscalculadora.astro
@@ -34,7 +34,7 @@ import Scroll from "./Scroll.astro";
       >
         <ion-icon
           class="mx-2 text-xl text-green-500 font-bold"
-          name="arrow-redo-outline"></ion-icon><a href="#superboard"
+          name="arrow-redo-outline"></ion-icon><a href="/Fibrecemento"
           >TABIQUE SUPERBOARD EXTERIOR-INTERIOR</a
         >
       </li>
@@ -43,7 +43,7 @@ import Scroll from "./Scroll.astro";
       >
         <ion-icon
           class="mx-2 text-xl text-green-500 font-bold"
-          name="arrow-redo-outline"></ion-icon><a href="#cieloraso"
+          name="arrow-redo-outline"></ion-icon><a href="/CieloRaso"
           >CIELO RASO</a
         >
       </li>
@@ -52,7 +52,7 @@ import Scroll from "./Scroll.astro";
       >
         <ion-icon
           class="mx-2 text-xl text-green-500 font-bold"
-          name="arrow-redo-outline"></ion-icon><a href="#baldosa60x60"
+          name="arrow-redo-outline"></ion-icon><a href="/Baldosa60x60"
           >TECHO CON BALDOSA 0.61M X 0.61M</a
         >
       </li>
@@ -61,7 +61,7 @@ import Scroll from "./Scroll.astro";
       >
         <ion-icon
           class="mx-2 text-xl text-green-500 font-bold"
-          name="arrow-redo-outline"></ion-icon><a href="#baldosa60x120"
+          name="arrow-redo-outline"></ion-icon><a href="/Baldosa60x120"
           >TECHO CON BALDOSA 0.61M X 1.22M</a
         >
       </li>
