--- a/src/components/PublicPrincipal.astro
+++ b/src/components/PublicPrincipal.astro
@@ -1,6 +1,6 @@
 ---
 import Slider from "./Slider.astro";
-import logo from "../img/logo-metaldryll.png";
+import logo from "./img/logoMetaldryll.png";
 ---
 
 <script>
