--- a/src/components/Slider.astro
+++ b/src/components/Slider.astro
@@ -1,8 +1,8 @@
 ---
-import img1 from "../img/Proyecto-1.jpg";
-import img2 from "../img/Proyecto-3-1.jpg";
-import img3 from "../img/Viviendas-Drywall.jpg";
-import img4 from "../img/bungalows-modulares-back.jpg";
+import img1 from "./img/Proyecto-1.jpg";
+import img2 from "./img/Proyecto-3-1.jpg";
+import img3 from "./img/Viviendas-Drywall.jpg";
+import img4 from "./img/bungalows-modulares-back.jpg";
 ---
 
 <div class="slider">
