--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
 import Header from "../components/Header.astro";
 import Background from "../components/Background.astro";
-
+import Footer from "../components/Footer.astro";
 interface Props {
   title: string;
 }
@@ -45,6 +45,7 @@ const { title } = Astro.props;
     <Background />
     <Header />
     <slot />
+    <Footer />
   </body>
 </html>
 <style is:global>
