--- a/src/Moda/Modal.css
+++ b/src/Moda/Modal.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   --bg-modal: rgba(0, 0, 0, 0.75);
 }
 
@@ -69,6 +69,83 @@
   overflow: hidden;
   padding: 0px 13px;
 
+  background: #3253d8;
+  color: #fff;
+} */
+.modal {
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  width: 100%;
+  min-height: 100vh;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal.is-open {
+  display: flex;
+}
+
+.modal-container {
+  position: relative;
+  padding: 1rem;
+  max-width: 600px;
+  min-height: 200px;
+  max-height: 100vh;
+  overflow-y: auto;
+  background-color: #fff;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  animation: zoomIn 0.5s;
+}
+
+.modal-container .imgModal {
+  width: 100px;
+  margin-top: -60px;
+  border-radius: 50%;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.modal-container .btnModal {
+  background: local;
+  color: rgb(11, 11, 11);
+  border: 0;
+  border-radius: 50%;
+  outline: none;
+  font-size: 18px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.modal-container .btnModal:hover {
+  background-color: #ddd; /* Cambia el color de fondo al pasar el ratón */
+}
+
+.modal-close {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  font-size: 18px;
+  color: #888;
+  cursor: pointer;
+}
+
+.header__modal {
+  position: absolute;
+  top: 0;
+  left: 0;
+  line-height: 55px;
+  font-size: 18px;
+  font-weight: 600;
+  width: 100%;
+  overflow: hidden;
+  padding: 0px 13px;
   background: #3253d8;
   color: #fff;
 }
