--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,14 +11,20 @@ import logo from "./img/logoMetaldryll.png";
   });
 </script>
 
-<nav class="border-gray-200 bg-gray-50 dark:bg-gray-800 dark:border-gray-700">
+<nav
+  class="border-gray-200 bg-gray-50 dark:bg-gray-800 dark:border-gray-700 header"
+>
   <div
     class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
   >
     <a href="#" class="flex items-center">
-      <img src={logo.src} class="h-8 mr-3 rounded-full" alt="MetalDryll Logo" />
+      <img
+        src={logo.src}
+        class="h-14 mr-3 rounded-full"
+        alt="MetalDryll Logo"
+      />
       <span
-        class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
+        class="self-center text-2xl font-bold whitespace-nowrap dark:text-white"
         >METALDRYLL</span
       >
     </a>
@@ -69,3 +75,24 @@ import logo from "./img/logoMetaldryll.png";
     </div>
   </div>
 </nav>
+
+<style>
+  .header {
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 1;
+
+    animation: enhance-header linear both;
+    animation-timeline: scroll(root);
+    animation-range: 0 200px;
+  }
+  @keyframes enhance-header {
+    to {
+      background: rgba(255, 255, 255, 0.4);
+      backdrop-filter: blur(5px);
+      font-size: 18px;
+      color: black;
+    }
+  }
+</style>
