--- a/src/components/TitleDeCalculos.astro
+++ b/src/components/TitleDeCalculos.astro
@@ -7,7 +7,7 @@ const { title } = Astro.props;
 
 <div class="p-5 text-center shake-horizontal font-sans text-slate-200">
   <h2
-    class="shake-horizontal text-2xl md:text-6xl font-medium py-6 md:py-2 tracking-wider shadow-md"
+    class="shake-horizontal text-[30px] md:text-[35px] font-bold py-6 md:py-2 tracking-wider shadow-md"
   >
     {title}
   </h2>
