--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ import Header from "../components/Header.astro";
 import Background from "../components/Background.astro";
 import Footer from "../components/Footer.astro";
 import logo from "../components/img/logoMetaldryll.png";
+import { Analytics } from "@vercel/analytics/react";
 interface Props {
   title: string;
 }
@@ -98,6 +99,7 @@ const { title } = Astro.props;
     <Header />
     <slot />
     <Footer />
+    <Analytics />
   </body>
 </html>
 <style is:global>
