--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,7 +29,7 @@ const { title } = Astro.props;
     <meta name="robots" content="index, follow" />
     <link
       rel="canonical"
-      href="https://web.facebook.com/p/metaldryll-100055747674115/?paipv=0&eav=Afaio9o1-YrOaCM47xeXkAf5CAIOxBLVwKWnGlPDPkR_QmpxgC_hsJLk948mE1E4XyA&_rdc=1&_rdr"
+      href="https://metaldryll-calculadora.vercel.app"
     />
 
     <!-- Agrega metadatos de Open Graph para mejorar la presentación en redes sociales -->
@@ -47,7 +47,7 @@ const { title } = Astro.props;
     />
     <meta
       property="og:url"
-      content="https://web.facebook.com/p/metaldryll-100055747674115/?paipv=0&eav=Afaio9o1-YrOaCM47xeXkAf5CAIOxBLVwKWnGlPDPkR_QmpxgC_hsJLk948mE1E4XyA&_rdc=1&_rdr"
+      content="https://metaldryll-calculadora.vercel.app"
     />
     <meta property="og:type" content="website" />
 
