cambiando imagen del formulario

--- a/src/components/Baldosa60x60/ContainerBal60.astro
+++ b/src/components/Baldosa60x60/ContainerBal60.astro
@@ -10,36 +10,36 @@ import FormBal60 from "./FormBal60.astro";
   <div class="grid grid-cols-5 gap-4">
     <div>
       <img
-        class="h-auto max-w-full rounded-lg"
-        src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-1.jpg"
+        class="h-full max-w-full rounded-lg object-cover"
+        src="https://image.made-in-china.com/43f34j10rhpgvBFdLNzW/Best-Selling-60-60-Shape-PVC-Gypsum-Board-Suspended-Ceiling-Tile-Vinyl-Faced-Gypsum-Tiles-Suspended-PVC-Gypsum-Laminated-Ceiling.jpg"
+        alt="superboad"
+      />
+    </div>
+    <div>
+      <img
+        class="h-full max-w-full rounded-lg object-cover"
+        src="https://cusco.buscalperu.com/wp-content/uploads/2021/08/Armstorn-Biselada.jpg"
         alt=""
       />
     </div>
     <div>
       <img
-        class="h-auto max-w-full rounded-lg"
-        src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-2.jpg"
+        class="h-full max-w-full rounded-lg object-cover"
+        src="https://www.cielorasoperu.com/wp-content/uploads/2021/02/Baldosa_Gypsum_vinil_238_Vista_CRP.jpg"
         alt=""
       />
     </div>
     <div>
       <img
-        class="h-auto max-w-full rounded-lg"
-        src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-3.jpg"
+        class="h-full max-w-full rounded-lg object-cover"
+        src="https://www.cielorasoperu.com/wp-content/uploads/2021/09/Suspension-Blog.jpg"
         alt=""
       />
     </div>
     <div>
       <img
-        class="h-auto max-w-full rounded-lg"
-        src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-4.jpg"
-        alt=""
-      />
-    </div>
-    <div>
-      <img
-        class="h-auto max-w-full rounded-lg"
-        src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-5.jpg"
+        class="h-full max-w-full rounded-lg object-cover"
+        src="https://corporacionhuancayo.com/wp-content/uploads/2020/07/cielo-raso-inspecc-fibra-mineral-cortega.jpg"
         alt=""
       />
     </div>
