--- a/src/components/Standar/ContainerStandar.astro
+++ b/src/components/Standar/ContainerStandar.astro
@@ -9,36 +9,36 @@ import Muro from "../img/muro.jpg";
   <div class="grid grid-cols-5 gap-4">
     <div>
       <img
-        class="h-auto max-w-full rounded-lg"
-        src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-1.jpg"
+        class="h-full max-w-full rounded-lg object-cover"
+        src="https://sudrywall.com/wp-content/uploads/2021/07/placa-de-yeso-600x600.jpg"
         alt=""
       />
     </div>
     <div>
       <img
-        class="h-auto max-w-full rounded-lg"
-        src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-2.jpg"
+        class="h-full max-w-full rounded-lg object-cover"
+        src="https://e.rpp-noticias.io/xlarge/2018/04/23/521452_598573.jpg"
         alt=""
       />
     </div>
     <div>
       <img
-        class="h-auto max-w-full rounded-lg"
-        src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-3.jpg"
+        class="h-full max-w-full rounded-lg object-cover"
+        src="https://peruconstruye.net/wp-content/uploads/2019/12/DRYWALL-04.12.19.jpg"
         alt=""
       />
     </div>
     <div>
       <img
-        class="h-auto max-w-full rounded-lg"
-        src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-4.jpg"
+        class="h-full max-w-full rounded-lg object-cover"
+        src="https://peruconstruye.net/wp-content/uploads/2021/11/CONSTRUCCION-DRYWALL-scaled.jpg"
         alt=""
       />
     </div>
     <div>
       <img
-        class="h-auto max-w-full rounded-lg"
-        src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-5.jpg"
+        class="h-full max-w-full rounded-lg object-cover"
+        src="https://www.evisos.com.pe/img/tmp/2022/05/22/drywall-construcciones-acabados_qkb2pt7_3.jpg"
         alt=""
       />
     </div>
