--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -76,6 +76,7 @@ const { title } = Astro.props;
     <link rel="icon" type="image/svg+xml" href={logo.src} id="icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="manifest" href="@/manifest.json" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,700;0,900;1,500&display=swap"
       rel="stylesheet"
@@ -92,6 +93,7 @@ const { title } = Astro.props;
     <script
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
     <title>{title}</title>
   </head>
   <body>
