cambio en el scroll

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,10 +27,7 @@ const { title } = Astro.props;
     />
     <meta name="author" content="METALDRYLL" />
     <meta name="robots" content="index, follow" />
-    <link
-      rel="canonical"
-      href="https://metaldryll-calculadora.vercel.app"
-    />
+    <link rel="canonical" href="https://metaldryll-calculadora.vercel.app" />
 
     <!-- Agrega metadatos de Open Graph para mejorar la presentación en redes sociales -->
     <meta
@@ -112,5 +109,7 @@ const { title } = Astro.props;
   }
   html {
     font-family: "Roboto", sans-serif;
+    scrollbar-color: #ef0054 #e5e7eb;
+    scrollbar-width: thin;
   }
 </style>
