--- a/src/pages/Rh.astro
+++ b/src/pages/Rh.astro
@@ -1,10 +1,10 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import Linkscalculadora from "../components/Linkscalculadora.astro";
+import Layout from "../../../layouts/Layout.astro";
+import Linkscalculadora from "../../Linkscalculadora.astro";
 
-import TitleDeCalculos from "../components/TitleDeCalculos.astro";
+import TitleDeCalculos from "../../TitleDeCalculos.astro";
 
-import ContainerRh from "../components/Rh/ContainerRh.astro";
+import ContainerRh from "../ContainerRh.astro";
 ---
 
 <Layout title="Calculando Plancha Standar">
