mejorando el footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,10 +13,27 @@
           construcción innovadoras y de calidad.
         </p>
         <ul class="sci">
-          <li><a href="#"><ion-icon name="logo-facebook"></ion-icon></a></li>
-          <li><a href="#"><ion-icon name="logo-instagram"></ion-icon></a></li>
-          <li><a href="#"><ion-icon name="logo-youtube"></ion-icon></a></li>
-          <li><a href="#"><ion-icon name="logo-tiktok"></ion-icon></a></li>
+          <li>
+            <a
+              href="https://www.facebook.com/profile.php?id=100055747674115"
+              target="_blank"><ion-icon name="logo-facebook"></ion-icon></a
+            >
+          </li>
+          <li>
+            <a href="https://www.instagram.com/metaldryll" target="_blank"
+              ><ion-icon name="logo-instagram"></ion-icon></a
+            >
+          </li>
+          <li>
+            <a href="#" target="_blank"
+              ><ion-icon name="logo-youtube"></ion-icon></a
+            >
+          </li>
+          <li>
+            <a href="https://tiktok.com/metaldryll" target="_blank"
+              ><ion-icon name="logo-tiktok"></ion-icon></a
+            >
+          </li>
         </ul>
       </div>
 
@@ -41,7 +58,10 @@
           </li>
           <li>
             <span><ion-icon name="call-outline"></ion-icon></span>
-            <p><a href="tel:12345678">+51 994 322 867</a></p>
+            <div class="flex flex-col">
+              <p><a href="tel:12345678">+51 994 322 867</a></p>
+              <p><a href="tel:12345678">+51 933 406 590</a></p>
+            </div>
           </li>
           <li>
             <span><ion-icon name="location-outline"></ion-icon></span>
@@ -49,14 +69,24 @@
           </li>
           <li>
             <span><ion-icon name="call-outline"></ion-icon></span>
-            <p><a href="tel:1234567"> +51 994 322 867</a></p>
+            <div class="flex flex-col">
+              <p><a href="tel:1234567"> +51 994 322 867</a></p>
+              <p><a href="tel:12345678">+51 963 019 545</a></p>
+            </div>
           </li>
         </ul>
       </div>
     </div>
   </footer>
   <div class="copyrightText">
-    <p>Copyright ® 2023 Ervic Linares. Developer</p>
+    <p>
+      Copyright ® 2023 <a
+        class="text-[17px] text-green-500 hover:text-scale[20px] underline"
+        href="https://ervic-linares.vercel.app/"
+        target="_blank"
+        title="Visitar Miportfolio :)">Ervic Linares.</a
+      > Developer
+    </p>
   </div>
 </div>
 <style>
