--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -70,7 +70,7 @@
           <li>
             <span><ion-icon name="call-outline"></ion-icon></span>
             <div class="flex flex-col">
-              <p><a href="tel:1234567"> +51 994 322 867</a></p>
+              <p><a href="tel:+51994322867"> +51 994 322 867</a></p>
               <p><a href="tel:12345678">+51 963 019 545</a></p>
             </div>
           </li>
