--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,7 +4,7 @@ import Background from "../components/Background.astro";
 import Footer from "../components/Footer.astro";
 import logo from "../components/img/logoMetaldryll.png";
 import { Analytics } from "@vercel/analytics/react";
-import Acesores from "../components/Acesores.astro";
+
 interface Props {
   title: string;
 }
@@ -74,7 +74,7 @@ const { title } = Astro.props;
     <link rel="icon" type="image/svg+xml" href={logo.src} id="icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="manifest" href="@/manifest.json" />
+    <!-- <link rel="manifest" href="../helpers/manifest.json" /> -->
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,700;0,900;1,500&display=swap"
       rel="stylesheet"
@@ -98,7 +98,7 @@ const { title } = Astro.props;
     <Background />
     <Header />
     <slot />
-    
+
     <Footer />
     <Analytics />
   </body>
