creando las card de materiales

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import Header from "../components/Header.astro";
 import Background from "../components/Background.astro";
+import Card from "../components/Card.astro";
 import Footer from "../components/Footer.astro";
 import logo from "../components/img/logoMetaldryll.png";
 import { Analytics } from "@vercel/analytics/react";
@@ -13,7 +14,7 @@ const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -98,7 +99,7 @@ const { title } = Astro.props;
     <Background />
     <Header />
     <slot />
-
+    <Card />
     <Footer />
     <Analytics />
   </body>
