--- a/src/components/Linkscalculadora.astro
+++ b/src/components/Linkscalculadora.astro
@@ -65,6 +65,15 @@ import Scroll from "./Scroll.astro";
           >TECHO CON BALDOSA 0.61M X 1.22M</a
         >
       </li>
+<li
+        class="text-white bg-gray-900 hover:text-gray-900 hover:bg-gray-100 border border-gray-200 focus:ring-4 focus:outline-none focus:ring-gray-100 font-medium rounded-lg text-sm px-5 py-3 text-center inline-flex items-center dark:focus:ring-gray-600 dark:bg-gray-800 dark:border-gray-700 dark:text-white dark:hover:bg-gray-700 mr-2 mb-2"
+      >
+        <ion-icon
+          class="mx-2 text-xl text-green-500 font-bold"
+          name="arrow-redo-outline"></ion-icon><a href="https://www.zhitov.com/es/wooden_truss/"
+          >Cercha de madera </a
+        >
+      </li>
     </ul>
   </nav>
   <Scroll />
