--- a/src/components/Linkscalculadora.astro
+++ b/src/components/Linkscalculadora.astro
@@ -71,7 +71,7 @@ import Scroll from "./Scroll.astro";
         <ion-icon
           class="mx-2 text-xl text-green-500 font-bold"
           name="arrow-redo-outline"></ion-icon><a href="https://www.zhitov.com/es/wooden_truss/"
-          >Cercha de madera </a
+          >CERCHA DE MADERA </a
         >
       </li>
     </ul>
